--- a/README
+++ b/README
@@ -1,14 +1,17 @@
 ==================
- de Jong Explorer
+ Fyre
 ==================
-Version 0.5
+Version 0.6
 
 Introduction
 ------------
 
-The de Jong Explorer provides a rendering of the Peter de Jong map, with
-an interactive GTK+ frontend and a command line interface for easy and
-efficient rendering of high-resolution, high quality images.
+Fyre provides a rendering of the Peter de Jong map, with an interactive
+GTK+ frontend and a command line interface for easy and efficient rendering
+of high-resolution, high quality images.
+
+This program was previously known as 'de Jong Explorer', but has been
+renamed to make way for supporting other chaotic functions.
 
 All the images you can create with this program are based on the simple
 Peter de Jong map equations:
@@ -18,9 +21,8 @@ Peter de Jong map equations:
 
 For most values of a,b,c and d the point (x,y) moves chaotically. The
 resulting image is a map of the probability that the point lies within
-the area represented by each pixel. As you let the de Jong Explorer
-render longer it collects more samples and this probability map and the
-image becomes more accurate.
+the area represented by each pixel. As you let Fyre render longer it collects
+more samples and this probability map and the image becomes more accurate.
 
 The resulting probability map is treated as a High Dynamic Range image.
 This software includes some image manipulation features that let you
@@ -45,9 +47,9 @@ One convenient use of this is to save small low-quality images using the
 GUI, then use the -i, -t, -s, and -o options to render very high quality
 and/or large images noninteractively.
 
-When using the -o (--output) option, no GUI is presented. Instead, the
-de Jong Explorer just outputs status lines every so often with the current
-rendering process. These lines include:
+When using the -o (--output) option, no GUI is presented. Instead, Fyre
+just outputs status lines every so often with the current rendering process.
+These lines include:
 
   - percent completion
   - current number of iterations
@@ -59,14 +61,13 @@ rendering process. These lines include:
 Animation
 ---------
 
-de Jong Explorer now includes a somewhat experimental animation system.
-From the main explorer window, use View -> Animation window to open the
-animation interface. Animations are represented as a list of keyframes,
-with a transition after each. Keyframes can be manipulated with the
-buttons at the top of the window. Transitions consist of a duration, in
-seconds, and an editable curve. This curve's presets can be used to
-transition linearly or ease in and out of keyframes, but you can also
-edit the curve for more complex effects.
+Fyre now includes a somewhat experimental animation system. From the main
+explorer window, use View -> Animation window to open the animation interface.
+Animations are represented as a list of keyframes, with a transition after
+each. Keyframes can be manipulated with the buttons at the top of the window.
+Transitions consist of a duration, in seconds, and an editable curve. This
+curve's presets can be used to transition linearly or ease in and out of
+keyframes, but you can also edit the curve for more complex effects.
 
 Each keyframe in the list also shows you the bifurcation diagram between
 that keyframe's parameters and the next. Intense black dots or lines in
@@ -95,10 +96,13 @@ Compiling
 ---------
 
 Nothing fancy, just type 'make'. Currently the i686 architecture is
-hardcoded, as on modern intel-compatible machines this gives a major
-speed boost. You'll need to change this if you're not on an intel-compatible
-machine. This has been tested on an Athlon XP, Pentium 4, and PowerPC G3.
+turned on automatically if your CPU implements mmx, as on modern
+ia32 machines this gives a major speed boost. This has been tested on
+Athlon XP, Pentium 4, Itanium2 and PowerPC G3 CPUs.
 
+If you have the Intel C compiler installed, you can use this by setting
+your CC environment variable to "icc". On a 1500MHz ia64 test, using the
+intel compiler compiler resulted in a 25% speed increase.
 
 Authors
 --------
