--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.8 (27 January 2005)
+	* Minor bugfixes
+	* Add an icon
+
 0.7 (02 January 2005)
 	* Brand New Cluster support!
 	* GtkFileChooser support for gtk+ 2.4+
